// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for react components Coin details component should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="coin-details"
      >
        <div
          class="hero"
        >
          <img
            alt="coin-icon"
          />
          <div
            class="hero-head"
          >
            <h2 />
          </div>
        </div>
        <div
          class="details"
        >
          <h2>
             
            Details
          </h2>
          <ul>
            <li>
              <span>
                Name:
              </span>
              <span />
            </li>
            <li>
              <span>
                Symbol:
              </span>
              <span />
            </li>
            <li>
              <span>
                Rank:
              </span>
              <span />
            </li>
            <li>
              <span>
                Price to USD:
              </span>
              <span>
                 ~$
                NaN
              </span>
            </li>
            <li>
              <span>
                Daily Change:
              </span>
              <span>
                %
              </span>
            </li>
            <li>
              <span>
                Market Cap:
              </span>
              <span>
                NaN
                B
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="coin-details"
    >
      <div
        class="hero"
      >
        <img
          alt="coin-icon"
        />
        <div
          class="hero-head"
        >
          <h2 />
        </div>
      </div>
      <div
        class="details"
      >
        <h2>
           
          Details
        </h2>
        <ul>
          <li>
            <span>
              Name:
            </span>
            <span />
          </li>
          <li>
            <span>
              Symbol:
            </span>
            <span />
          </li>
          <li>
            <span>
              Rank:
            </span>
            <span />
          </li>
          <li>
            <span>
              Price to USD:
            </span>
            <span>
               ~$
              NaN
            </span>
          </li>
          <li>
            <span>
              Daily Change:
            </span>
            <span>
              %
            </span>
          </li>
          <li>
            <span>
              Market Cap:
            </span>
            <span>
              NaN
              B
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests for react components Coin list component should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="coins-container"
      >
        <img
          alt="banner"
          src="banner.jpg"
        />
        <div
          class="search-field"
        >
          <input
            placeholder="Search cryptocurrency"
            type="search"
            value=""
          />
          <img
            alt="search icon"
            src="find.svg"
          />
        </div>
        <div
          class="coins-list"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="coins-container"
    >
      <img
        alt="banner"
        src="banner.jpg"
      />
      <div
        class="search-field"
      >
        <input
          placeholder="Search cryptocurrency"
          type="search"
          value=""
        />
        <img
          alt="search icon"
          src="find.svg"
        />
      </div>
      <div
        class="coins-list"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests for react components Header component should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          class="left"
        >
          <a
            href="/"
          >
            <img
              alt="back"
              src="arrow-back-ios.svg"
            />
          </a>
          <h1>
            Cryptocurrency
          </h1>
        </div>
        <div
          class="right"
        >
          <img
            alt="mic"
            src="mic.svg"
          />
          <img
            alt="settings"
            src="settings.svg"
          />
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        class="left"
      >
        <a
          href="/"
        >
          <img
            alt="back"
            src="arrow-back-ios.svg"
          />
        </a>
        <h1>
          Cryptocurrency
        </h1>
      </div>
      <div
        class="right"
      >
        <img
          alt="mic"
          src="mic.svg"
        />
        <img
          alt="settings"
          src="settings.svg"
        />
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
